have method, constructor